--- a/html/css/style.css
+++ b/html/css/style.css
@@ -666,6 +666,8 @@ textarea.input-bg {background-color: #f7f7f7; border-radius: 4px; border: 1px so
 .margin-90px-all {margin:90px}
 .margin-95px-all {margin:95px}
 .margin-100px-all {margin:100px}
+.margin-left-200 {margin-left: -200px!important;}
+.margin-right-200 {margin-right: -200px!important;}
 
 .no-margin {margin:0 !important}
 .no-margin-lr {margin-left: 0 !important; margin-right: 0 !important}
@@ -3764,6 +3766,36 @@ aside .latest-post li figure {width: 75px;}
 ====================================== */
 
 .demo-heading {font-size: 40px; line-height: 46px;}
+
+
+/* ===================================
+  Start Who We Are
+====================================== */
+
+
+.font-size-15-line-height-30{font-size: 15px; line-height: 30px;}
+.team{text-align: center; border-bottom: 1px solid #e4593e;}
+.img-team {border: 5px solid #ddd; border-radius: 50%; }
+.line-height-30{line-height: 30px;}
+.designation {color: #F05C40; text-align: center;}
+
+/* ===================================
+  End Who We Are
+====================================== */
+
+
+/* ===================================
+  Start Video section
+====================================== */
+
+
+.btn-play {position: absolute; width: 100%; height: 100%; border: 1px solid red; opacity:0.5;}
+.btn-play > i {font-size: 100px;}
+.boarmedia-message-ceo-p{text-align: justify!important;}
+/* ===================================
+  End of Video section
+====================================== */
+
 
 /*.all-demo i {font-size: 15px; vertical-align: middle; position: relative; top: -1px; color: #6f6f6f}
 .buy-theme {transition-timing-function: ease-in-out; -moz-transition-timing-function: ease-in-out; -webkit-transition-timing-function: ease-in-out; -o-transition-timing-function: ease-in-out; transition-duration: .2s; -moz-transition-duration: .2s; -webkit-transition-duration: .2s; -o-transition-duration: .2s; position:fixed; top:130px; right: -70px; background: #fff; z-index: 1000; -moz-box-shadow:0 0 10px rgba(0,0,0,0.2);-webkit-box-shadow:0 0 10px rgba(0,0,0,0.2);box-shadow:0 0 10px rgba(0,0,0,0.2); z-index: 10}
