--- a/html/css/style.css
+++ b/html/css/style.css
@@ -3594,6 +3594,7 @@ footer input::-webkit-input-placeholder { color: #6f6f6f; text-overflow: ellipsi
 footer input::-moz-placeholder { color: #6f6f6f; text-overflow: ellipsis; font-size: 11px; font-weight: 400; opacity:1;} 
 footer input:-ms-input-placeholder { color: #6f6f6f; text-overflow: ellipsis; font-size: 11px; font-weight: 400; opacity:1;}
 footer .newsletter input { color: #6f6f6f; letter-spacing: normal; }
+.footer-text-p{text-align: justify; word-spacing: 1px!important;}
 
 /* latest post */
 .latest-post { list-style: none; padding: 0; margin: 0;}
