--- a/html/css/style.css
+++ b/html/css/style.css
@@ -685,6 +685,7 @@ header{line-height: 0px!important;}
 .margin-auto {margin: 0 auto !important;}
 
 /* margin top */
+.top-bottom-margin{margin-top: 5px; margin-bottom: 5px;}
 .margin-one-top {margin-top:1%}
 .margin-one-half-top {margin-top:1.5%}
 .margin-two-top {margin-top:2%}
@@ -1929,6 +1930,11 @@ footer .extra-small-icon li:last-child, footer .small-icon li:last-child, footer
 .medium-icon a {font-size: 20px; width: 50px; height:50px;line-height: 48px;}
 .large-icon a {font-size: 24px; width: 60px; height: 60px;line-height: 58px;}
 .extra-large-icon a {font-size: 30px; width: 70px; height: 70px;line-height: 68px;}
+.square-radio{width: 50px;} 
+.square-radio input[type=radio] {border: 1px solid black!important; margin-top: 0px!important; width: 15px; height: 15px; -webkit-appearance:none!important;}
+.square-radio input[type=radio]:checked {background-color: #FF214F!important;}
+.square-radio input[type=radio]:focus {outline-color: transparent!important; padding: 0em!important;}
+.square-radio input[type=radio] {position: static!important;}
 
 /* social icon style */
 .social-icon-style-1 a.facebook,.social-icon-style-2 a.facebook,.social-icon-style-3 a.facebook,.social-icon-style-4 a.facebook span,.social-icon-style-10 a.facebook span {background-color: #3b5998}
@@ -3590,7 +3596,7 @@ a img.aligncenter { display: block; margin-left: auto; margin-right: auto }
 ====================================== */
 
 /* scroll to top */
-.scroll-top-arrow, .scroll-top-arrow:focus { color: #fff; background: #878787; line-height: 28px; display: none; height: 30px; width: 30px; padding: 0; position: fixed; right: 45px; text-align: center; text-decoration: none; top: 91%; z-index: 10006; border-radius: 100%;}
+.scroll-top-arrow, .scroll-top-arrow:focus { color: #fff; background: #FF214F; line-height: 28px; display: none; height: 30px; width: 30px; padding: 0; position: fixed; right: 45px; text-align: center; text-decoration: none; top: 91%; z-index: 10006; border-radius: 100%;}
 .scroll-top-arrow:hover {background: #000; opacity: .8; color: #fff; border-color: #ff214f}
 .scroll-top-arrow i {line-height: 30px;  position: relative;}
 
