--- a/html/css/responsive.css
+++ b/html/css/responsive.css
@@ -4357,7 +4357,7 @@
 
     /* custom */
     section {padding: 50px 0;}
-    section.big-section {padding:80px 0;}
+    section.big-section {}
     section.extra-big-section {padding:100px 0;}
     section.half-section {padding:25px 0;}
     .xs-col-2-nth .col-sm-6:nth-child(2n+1) {clear: left;}
