--- a/html/css/style.css
+++ b/html/css/style.css
@@ -105,6 +105,7 @@ h6 {font-size:25px; line-height:30px}
 .text-white {color:#FFF}
 .text-black {color:#000}
 .text-extra-dark-gray {color:#232323}
+.text-extra-white{color: white}
 .text-dark-gray {color:#626262}
 .text-extra-medium-gray {color:#757575}
 .text-medium-gray {color:#939393}
@@ -250,6 +251,13 @@ a.text-very-light-gray-hover:hover {color:#ededed}
 /*.bg-black1 {background-color:#000;}*/
 .bg-black1 {background-color:#000;}
 .bg-extra-dark-gray {background-color:#1c1c1c;}
+.onHover-white{
+      transition: all 3s;
+}
+.onHover-white:hover{
+    background: white;
+     transform: rotate(1080deg);
+}
 .bg-dark-gray {background-color:#757575;}
 .bg-extra-medium-gray {background-color:#939393;}
 .bg-medium-gray {background-color:#dbdbdb;}
@@ -1541,7 +1549,7 @@ header{line-height: 0px!important;}
 .padding-35px-tb {padding-top:35px; padding-bottom:35px;}
 .padding-40px-tb {padding-top:40px; padding-bottom:40px;}
 .padding-45px-tb {padding-top:45px; padding-bottom:45px;}
-.padding-50px-tb {padding-top:50px; padding-bottom:50px;}
+.padding-50px-tb {padding-top:20px; padding-bottom:20px;}
 .padding-55px-tb {padding-top:55px; padding-bottom:55px;}
 .padding-60px-tb {padding-top:60px; padding-bottom:60px;}
 .padding-65px-tb {padding-top:65px; padding-bottom:65px;}
@@ -2252,7 +2260,9 @@ footer .small-icon li {margin: 0 8px;}
 nav.navbar.bootsnav .heder-menu-button .navbar-toggle {float: none; padding: 0; margin-top: 0; margin-bottom: 0; top: 4px}
 .white-link .header-searchbar, .white-link .header-social-icon {border-left: 1px solid rgba(255,255,255,.15);}
 .header-social-icon a {color: #232323}
+.margin-search{margin: 0 9px!important;}
 .header-social-icon a i, .header-searchbar a i {margin: 0 11px;}
+
 .header-searchbar a i { position: relative; top: -1px;}
 .header-social-icon a:last-child i { margin-right: 0;}
 .search-icon {padding-right: 10px;}
