--- a/html/css/responsive.css
+++ b/html/css/responsive.css
@@ -1,6 +1,7 @@
 @media (min-width: 992px) {
     .feature-box-14 > div:nth-child(even) { border-bottom: 0}
     .feature-box-14 > div:nth-child(odd) { border-bottom: 0}
+    .padding-bottom-investor{padding-bottom: 20% !important;}
 
     /*top logo*/
     .navbar-brand-top .navbar-collapse.collapse.display-inline-block { display: inline-block !important; vertical-align: middle;}
@@ -669,6 +670,9 @@
     .md-padding-30px-all {padding:30px !important;}
     .md-padding-35px-all {padding:35px !important;}
     .md-padding-40px-all {padding:40px !important;}
+    .padding-boxes{padding: 0px !important;}
+    .second-boxes-line-height{line-height:40.9px !important;}
+    .third-boxe-line-height{line-height: 36.9px !important;}
     .md-padding-45px-all {padding:45px !important;}
     .md-padding-50px-all {padding:50px !important;}
     .md-padding-55px-all {padding:55px !important;}
@@ -1481,6 +1485,7 @@
     h5 {font-size:24px; line-height:30px}
     h6 {font-size:22px; line-height:26px}
     p { margin: 0 0 20px; }
+    .small-text-12{font-size: 11px!important;}
 
     .title-large {font-size: 70px; line-height:65px}
     .title-extra-large {font-size: 100px; line-height:95px}
@@ -1510,7 +1515,7 @@
     nav.navbar.bootsnav li.dropdown .mega-menu-full > ul > li {border-bottom: none; margin-bottom: 10px}
     nav.navbar.bootsnav li.dropdown.open .mega-menu-full {padding-top: 10px;}
     nav.navbar.bootsnav li.dropdown .mega-menu-full > ul > li:last-child {margin-bottom: 0}
-    nav.navbar.bootsnav .navbar-nav li, nav.navbar.bootsnav li.dropdown ul.mega-menu-full li.dropdown-header { display: block; clear: both; border-bottom: 1px solid rgba(255, 255, 255, 0.06); border-top: 0; }
+    nav.navbar.bootsnav .navbar-nav li, nav.navbar.bootsnav li.dropdown ul.mega-menu-full li.dropdown-header { display: block; clear: both; border-bottom: 1px solid rgba(255, 255, 255, 0.06); border-top: 0;}
     .navbar-nav li > a, nav.navbar.navbar-default ul.nav > li > a, nav.navbar-brand-top.navbar.navbar-default ul.nav > li > a, header .navbar-nav li > a, header nav.navbar-fixed-top.header-light-transparent.white-link .navbar-nav > li > a, header nav.navbar-fixed-top.header-light.white-link .navbar-nav > li > a , nav.navbar.bootsnav li.dropdown ul.mega-menu-full li > a,header.sticky nav.navbar.navbar-default.navbar-fixed-top ul.nav > li > a, header.sticky nav.navbar.navbar-default.navbar-top ul.nav > li > a, nav.navbar.bootsnav li.dropdown ul.mega-menu-full li.dropdown-header{ margin: 0; padding: 9px 15px 8px; color: #939393; display: block; line-height: normal;}
     .navbar-nav li > a, nav.navbar.navbar-default ul.nav > li > a, header .navbar-nav li > a, header nav.navbar-fixed-top.header-light-transparent.white-link .navbar-nav > li > a,header.sticky nav.navbar.navbar-default.navbar-fixed-top ul.nav > li > a, header.header-appear nav.bootsnav.header-light-transparent .navbar-nav > li > a, header.header-appear nav.bootsnav.header-light .navbar-nav > li > a { color: #fff; }
     nav.navbar.bootsnav ul.nav > li.dropdown > ul.dropdown-menu  li a, nav.navbar.bootsnav ul.nav li.dropdown ul.dropdown-menu.mega-menu li a, nav.navbar.bootsnav li.dropdown ul.mega-menu-full li.dropdown-header { padding-left: 0; padding-right: 0;}
@@ -3077,12 +3082,14 @@
 }
 
     body { font-size: 12px; line-height: 20px}
+    .margin-right-2-4hrs{margin-left: 1.9em!important;}
 
     h1, h2, h3, h4, h5, h6 {margin:0 0 17px; padding:0; letter-spacing: 0; font-weight: 400;}
     h1 {font-size:37px; line-height: 42px;}
     h2 {font-size:30px; line-height:36px}
     h3 {font-size:28px; line-height:34px}
     h4 {font-size:24px; line-height:30px}
+    .promotional-offer-text{font-size: 18px!important;}
     h5 {font-size:20px; line-height:28px}
     h6 {font-size:18px; line-height:23px}
 
@@ -3306,6 +3313,8 @@
     .xs-margin-20px-bottom {margin-bottom:20px !important;}
     .xs-margin-25px-bottom {margin-bottom:25px !important;}
     .xs-margin-30px-bottom {margin-bottom:30px !important;}
+    .bottom-margin{margin-bottom: 0px !important;}
+    .font-size-20px{font-size: 20px !important;}
     .xs-margin-35px-bottom {margin-bottom:35px !important;}
     .xs-margin-40px-bottom {margin-bottom:40px !important;}
     .xs-margin-45px-bottom {margin-bottom:45px !important;}
@@ -3629,6 +3638,7 @@
     .xs-padding-six-all {padding:6%;}
     .xs-padding-six-half-all {padding:6.5%;}
     .xs-padding-seven-all {padding:7%;}
+    .padding-list-style-agm{padding: 2% 10% 2% 10%!important;}
     .xs-padding-seven-half-all {padding:7.5%;}
     .xs-padding-eight-all {padding:8%;}
     .xs-padding-eight-half-all {padding:8.5%;}
@@ -3671,6 +3681,7 @@
     .xs-padding-20px-all {padding:20px !important;}
     .xs-padding-25px-all {padding:25px !important;}
     .xs-padding-30px-all {padding:30px !important;}
+    .bottom-padding {padding-bottom: 0px !important;}
     .xs-padding-35px-all {padding:35px !important;}
     .xs-padding-40px-all {padding:40px !important;}
     .xs-padding-45px-all {padding:45px !important;}
@@ -4319,6 +4330,9 @@
     .xs-line-height-100 {line-height:100px}
 
     .page-title-large h1 {font-size: 35px; line-height: 35px;}
+    .text-heading-small {font-size: 28px!important;}
+    .straigh-text{font-size: 19px!important;}
+    .calendar .hrs{display: block!important;}
     .font-22 {font-size: 22px!important;}
     .page-title-medium h1 { font-size: 25px; line-height: 30px;}
     .title-large {font-size: 38px; line-height:44px}
@@ -4357,6 +4371,8 @@
 
     /* custom */
     section {padding: 50px 0;}
+    .padding-six-tips-small{padding: 10px 0 0 0!important;}
+    .paddings-mobile-first-small{padding: 10px 0 0 0!important;}
     section.big-section {}
     section.extra-big-section {padding:100px 0;}
     section.half-section {padding:25px 0;}
