--- a/html/css/style.css
+++ b/html/css/style.css
@@ -82,6 +82,7 @@ ul, ol, dl {list-style-position: outside; margin-bottom: 25px}
 /* font family */
 .alt-font {font-family: 'Montserrat', sans-serif; font-weight: 500}
 .main-font {font-family: 'Roboto', sans-serif;}
+.font-22{font-size: 22px!important;}
 
 /* heading */
 h1, h2, h3, h4, h5, h6 {margin:0 0 25px; padding:0; letter-spacing: 0; font-weight: 400;}
@@ -95,7 +96,7 @@ h6 {font-size:25px; line-height:30px}
 /* text size */
 .text-extra-small {font-size:11px; line-height:14px}
 .text-small {font-size:12px; line-height:20px}
-.text-medium {font-size:16px; line-height:23px}
+.text-medium {font-size:13px; line-height:23px}
 .text-large {font-size:18px; line-height:26px}
 .text-extra-large {font-size: 20px; line-height:26px}
 .title-large {font-size: 100px; line-height:95px}
@@ -281,10 +282,10 @@ a.text-very-light-gray-hover:hover {color:#ededed}
  
 
 .center-col {float:none; margin-left:auto; margin-right:auto }
-section {padding: 70px 0; overflow: hidden;}
+section {padding: 20px 0 70px 0; overflow: hidden;}
 .padding-bottom-60{padding-bottom: 0px;}
 .second-section{ padding: 30px 0;}
-section.big-section {padding:160px 0;}
+section.big-section {padding:160px 0 0 0;}
 section.extra-big-section {padding:200px 0;}
 section.half-section {padding:80px 0;}
 .overlap-section {margin-top:-14%; position: relative}
@@ -312,7 +313,7 @@ section.half-section {padding:80px 0;}
 
 .extra-small-input, .extra-small-textarea, .extra-small-select select { padding: 9px 17px; font-size: 12px; line-height: normal}
 
-.select-style { width: 100%; overflow: hidden; background: url("../images/select-arrow.png") no-repeat 97% 50%; border: 1px solid #d1d1d1; margin-bottom: 20px }
+.select-style { width: 100%; overflow: hidden;  border: 1px solid #d1d1d1; margin-bottom: 20px }
 .select-style select { width: 100%; border: none; box-shadow: none; background-color: transparent; background-image: none; -webkit-appearance: none; -moz-appearance: none; appearance: none;  cursor: pointer; }
 .select-style select:focus { outline: none; border: none; box-shadow: none }
 
@@ -691,6 +692,7 @@ header{line-height: 0px!important;}
 .no-margin-right {margin-right:0 !important}
 .margin-lr-auto {margin-left:auto !important; margin-right:auto !important; margin-top: 10px!important}
 .margin-auto {margin: 0 auto !important;}
+.margin-chkbox-footer {margin-bottom: 10px;}
 
 /* margin top */
 .top-bottom-margin{margin-top: 5px; margin-bottom: 5px;}
@@ -777,7 +779,7 @@ header{line-height: 0px!important;}
 .margin-six-half-bottom {margin-bottom:6.5%}
 .margin-seven-bottom {margin-bottom:7%}
 .margin-seven-half-bottom {margin-bottom:7.5%}
-.margin-eight-bottom {margin-bottom:8%}
+.margin-eight-bottom {margin-bottom:8%; margin-top: 8%;}
 .margin-eight-half-bottom {margin-bottom:8.5%}
 .margin-nine-bottom {margin-bottom:9%}
 .margin-nine-half-bottom {margin-bottom:9.5%}
@@ -1135,7 +1137,7 @@ header{line-height: 0px!important;}
 .padding-two-half-all {padding:2.5%;}
 .padding-three-all {padding:3%;}
 .padding-three-half-all {padding:3.5%;}
-.padding-four-all {padding:4%;}
+.padding-chkbox-left {padding-left: 0px; margin-top: 10px;}
 .padding-four-half-all {padding:4.5%;}
 .padding-five-all {padding:5%;}
 .padding-five-half-all {padding:5.5%;}
@@ -1204,6 +1206,8 @@ header{line-height: 0px!important;}
 
 /* padding top */
 .padding-one-top {padding-top:1%;}
+.paragraph-key-benifits {line-height: 35px!important; text-align: justify!important; font-size: 14px!important;
+}
 .padding-one-half-top {padding-top:1.5%;}
 .padding-two-top {padding-top:2%;}
 .padding-two-half-top {padding-top:2.5%;}
@@ -1636,7 +1640,7 @@ header{line-height: 0px!important;}
     Display and float
 ================================*/
 
-.logo-mid {width: 771px;  background: black; margin: 0px auto 0px auto; opacity: .9  }
+.logo-mid {width: auto;opacity: .9  }
 .display-block {display:block !important}
 .display-inline-block {display:inline-block !important}
 .display-inline {display:inline !important}
@@ -2431,7 +2435,7 @@ nav.navbar.bootsnav.menu-center ul.nav.navbar-center { display: table; float: no
 
 /* simple dropdown menu */
 .simple-dropdown.dropdown {position: relative;}
-.simple-dropdown .dropdown-menu {position: absolute; left: 0; background: rgba(35,35,35,1); min-width: 220px; padding: 13px 0 0px; box-shadow: none;}
+.simple-dropdown .dropdown-menu {position: absolute; left: 0; background: rgba(35,35,35,1); min-width: 220px; padding: 13px 0 10px; box-shadow: none;}
 .spacing-115{min-width: 215px!important;}
 nav.navbar.bootsnav .simple-dropdown .dropdown-menu > li { padding-left: 28px; padding-right: 28px;}
 .simple-dropdown .dropdown-menu > li > a {font-size: 12px; color: #9d9d9d; }
@@ -2440,7 +2444,7 @@ nav.navbar.bootsnav .simple-dropdown .dropdown-menu > li { padding-left: 28px; p
 .simple-dropdown .dropdown-menu > li > a.dropdown-toggle .fa, nav.navbar.bootsnav.sidebar-nav .nav.navbar-left-sidebar li.dropdown > a > .fa {position: absolute; right: 0; font-size: 12px; margin-top: 0; height: 20px; width: 20px; line-height: 20px; text-align: center; top: 50%; transform: translateY(-50%); -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -o-transform: translateY(-50%); -ms-transform: translateY(-50%);}
 .ang-right-top-55{top: 58%!important; left: 152px; }
 nav.navbar.bootsnav.sidebar-nav .nav.navbar-left-sidebar li a .fa {font-size: 16px;}
-nav.navbar.bootsnav .simple-dropdown .dropdown-menu > li.dropdown > ul,nav.navbar.bootsnav .simple-dropdown .dropdown-menu > li.dropdown > ul > li.dropdown > ul  {background: rgba(35,35,35,1); display: none; left: 220px; margin: -13px 0 0 1px; min-width: 220px; white-space: nowrap; position: absolute; top: 0; padding: 13px 0 0 0; font-weight: 500; text-transform: capitalize;}
+nav.navbar.bootsnav .simple-dropdown .dropdown-menu > li.dropdown > ul,nav.navbar.bootsnav .simple-dropdown .dropdown-menu > li.dropdown > ul > li.dropdown > ul  {background: rgba(35,35,35,1); display: none; left: 220px; margin: -13px 0 0 1px; min-width: 220px; white-space: nowrap; position: absolute; top: 0; padding: 13px 0 8px 0; font-weight: 500; text-transform: capitalize;}
 .spacing-162{min-width: 162px!important;}
 .simple-dropdown .dropdown-menu > li.dropdown > ul li a{color: #9d9d9d; font-size: 12px; line-height: 18px; font-weight: 500;}
 nav.navbar.bootsnav.navbar-default li.dropdown.simple-dropdown > ul.dropdown-menu > li.active > a { color: #fff;}
@@ -3618,7 +3622,7 @@ footer input::-webkit-input-placeholder { color: #6f6f6f; text-overflow: ellipsi
 footer input::-moz-placeholder { color: #6f6f6f; text-overflow: ellipsis; font-size: 11px; font-weight: 400; opacity:1;} 
 footer input:-ms-input-placeholder { color: #6f6f6f; text-overflow: ellipsis; font-size: 11px; font-weight: 400; opacity:1;}
 footer .newsletter input { color: #6f6f6f; letter-spacing: normal; }
-.footer-text-p{text-align: justify; word-spacing: 1px!important;}
+.footer-text-p{text-align: justify; letter-spacing: 0.7px; word-spacing: -1.8px!important;}
 
 /* latest post */
 .latest-post { list-style: none; padding: 0; margin: 0;}
